--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draggable": "^3.3.0",
+    "react-draggable-rotate": "0.0.21",
     "react-icons": "^3.7.0",
     "react-scripts": "3.0.1"
   },
