--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^6.2.0",
+    "jquery": "^3.4.1",
+    "popper": "^1.0.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-draggable": "^3.3.0",
     "react-draggable-rotate": "0.0.21",
